Fix header alignment and flush logo left

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ main {
 /* ROCKETRY CLUB LINE */
 .rocketry {
   font-family: 'Aileron', sans-serif;
-  font-size: 15vw;
+  font-size: 13vw;
   color: #E00122;
   letter-spacing: -0.075em;
   margin: 0;
